assets/css/main.css
/* ... */
		input[type="button"]:hover,
		input[type="submit"]:hover,
		input[type="reset"]:hover,
		button:hover,
		.button:hover {
			color: #f35858;
			border-color: rgba(243, 88, 88, 0.5);
		}

/* Icons */

	.icon {
		text-decoration: none;
		text-decoration: none;
	}

		.icon:before {
			-moz-osx-font-smoothing: grayscale;
			-webkit-font-smoothing: antialiased;
			display: inline-block;
			font-style: normal;
			font-variant: normal;
			text-rendering: auto;
			line-height: 1;
			text-transform: none !important;
			font-family: 'Font Awesome 5 Free';
			font-weight: 400;
		}

		.icon:before {
			line-height: inherit;
		}

		.icon > .label {
			display: none;
		}

		.icon.solid:before {
			font-weight: 900;
		}

		.icon.brands:before {
			font-family: 'Font Awesome 5 Brands';
		}

/* Wrappers */

	.wrapper {
		position: relative;
		background: #fff;
		overflow-x: hidden;
		padding: 6em 0 6em 0;
	}

	.image-wrapper {
		position: relative;
	}

		.image-wrapper .image {
			position: relative;
			z-index: 2;
		}

		.image-wrapper.first:before {
			content: '';
			display: block;
			width: 2000%;
			height: 100%;
			position: absolute;
			left: -1000%;
			top: 0;
			z-index: 1;
			box-shadow: inset 0px 0px 0px 1px #e8e8e8;
			background: #f6f8fb url("images/image-wrapper.svg");
		}

	#header-wrapper {
		position: relative;
		padding: 4em 0 2em 0;
		background-image: url("images/header.svg");
		background-image: url("images/overlay.png"), url("images/header.svg"), -moz-linear-gradient(75deg, #FF7088 15%, #ffdf9d 55%);
		background-image: url("images/overlay.png"), url("images/header.svg"), -webkit-linear-gradient(75deg, #FF7088 15%, #ffdf9d 55%);
		background-image: url("images/overlay.png"), url("images/header.svg"), -ms-linear-gradient(75deg, #FF7088 15%, #ffdf9d 55%);
		background-image: url("images/overlay.png"), url("images/header.svg"), linear-gradient(75deg, #FF7088 15%, #ffdf9d 55%);
		background-color: #f08c89;
		background-size: 100% 620%;
		background-size: 128px 128px, 100% 620%, auto;
		background-repeat: repeat, no-repeat, no-repeat;
	}

	.homepage #header-wrapper {
		padding: 10em 0 6em 0;
		background-size: 128px 128px, 100% 100%, auto;
	}

	#promo-wrapper {
		position: relative;
		background-image: url("images/overlay.png"), url("../../images/promo.webp");
		background-size: 192px 192px, cover;
		background-position: top left, center center;
		color: #fff;
		text-align: center;
		padding: 6em 0 6em 0;
	}

	#footer-wrapper {
		position: relative;
		border-top: solid 1px #c2c7cc;
		padding: 6em 0 6em 0;
		background-image: url("images/overlay.png"), url("images/footer.svg");
		background-size: 128px 128px,				100% 100%;
	}


/* Hero */

	#hero {
		position: relative;
		color: #fff;
		text-align: center;
		z-index: 1;
	}

		#hero h2 {
			color: #fff;
			font-size: 3em;
		}

		#hero strong {
			color: inherit;
		}

		#hero header > span {
			color: #fff;
		}

		#hero p {
			font-size: 1.5em;
			line-height: 1.5em;
		}

		#hero .button {
			background: #fff;
			border-color: rgba(255, 255, 255, 0);
			color: #f08c89;
			font-size: 1.25em;
		}

			#hero .button:hover {
				border-color: rgba(255, 255, 255, 0.75);
				background-color: rgba(255, 255, 255, 0.15);
				color: #fff;
			}

		#hero a {
			color: #fff;
			border-color: #fff;
			border-color: rgba(255, 255, 255, 0.5);
		}

			#hero a:hover {
				border-color: rgba(255, 255, 255, 0);
			}

/* Promo */

	#promo {
		background: rgba(255, 255, 255, 0.05);
		border: solid 1px rgba(255, 255, 255, 0.25);
		border-radius: 0.5em;
		padding: 1.75em 2.5em 1.75em 2.5em;
		display: inline-block;
		position: relative;
		z-index: 1;
	}

		#promo h2 {
			color: #fff;
			display: inline-block;
			margin-right: 1em;
			font-size: 1.75em;
		}

		#promo .button {
			background: #fff;
			border-color: rgba(255, 255, 255, 0);
			color: #27636B;
			font-size: 1.25em;
		}

			#promo .button:hover {
				border-color: rgba(255, 255, 255, 0.75);
				background-color: rgba(255, 255, 255, 0.15);
				color: #fff;
			}

/* Main */

	#main {
		padding-bottom: 4em;
	}

/* Footer */

	#footer {
		position: relative;
		z-index: 1;
	}

		#footer header.major {
			margin-bottom: 3em;
		}

/* Copyright */

	#copyright {
		position: relative;
		z-index: 1;
		text-align: center;
		border-top: solid 1px #d2d7dc;
		color: #a2a7ac;
		padding-top: 4em;
		margin-top: 6em;
	}

/* Normal */

	@media screen and (max-width: 1280px) {

		/* Basic */

			body, input, textarea, select {
				line-height: 1.5em;
				font-size: 13pt;
			}

			span.extra {
				display: none;
			}

		/* Wrappers */

			.wrapper {
				padding: 5em 0 5em 0;
			}

			#header-wrapper {
				padding: 2em 0 2em 0;
			}

			.homepage #header-wrapper {
				padding: 8em 0 4em 0;
			}

			#promo-wrapper {
				padding: 5em 0 5em 0;
			}

			#footer-wrapper {
				padding: 5em 0 5em 0;
			}

	}

/* Narrow */

	@media screen and (max-width: 1080px) {

		/* Sections/Article */

			header br {
				display: none;
			}

		/* Button */

			input[type="button"],
			input[type="submit"],
			input[type="reset"],
			button,
			.button {
				padding-left: 1.25em;
				padding-right: 1.25em;
			}

		/* Wrappers */

			.wrapper {
				padding: 4em 2em 4em 2em;
			}

			#header-wrapper {
				padding: 5em 0 1em 0;
			}

			.homepage #header-wrapper {
				padding: 5em 0 4em 0;
			}

			#promo-wrapper {
				padding: 2em;
			}

			#footer-wrapper {
				padding: 4em 2em 4em 2em;
			}

		/* Hero */

			#hero {
				padding: 3.5em 4em 0 4em;
			}

				#hero h2 {
					font-size: 2.75em;
				}

				#hero p br {
					display: none;
				}

		/* Promo */

			#promo {
				padding: 1.75em 2.5em 1.75em 2.5em;
				display: inline-block;
			}

				#promo .button {
					font-size: 1.25em;
				}

				#promo h2 {
					display: block;
					margin: 0 0 1em 0;
					font-size: 1.5em;
				}

		/* Copyright */

			#copyright {
				padding-top: 2em;
				margin-top: 3em;
			}

	}
/* ... */

